# navi-rs

./: Cargo.toml  Makefile  README.md  flake.nix
.github/hooks/: lint.yaml
.github/workflows/: rust.yaml
crates/audio/: Cargo.toml
crates/audio/src/: input.rs  io.rs  lib.rs
crates/model/: Cargo.toml
crates/model/src/: lib.rs  load.rs  model.rs  tokenizer.rs
crates/model/tests/: test_topology.rs
