[workspace]
resolver = "2"

members = [
    "crates/audio",
    "crates/model",
]

[workspace.package]
edition = "2024"
version = "0.1.0"
authors = ["Nicholas Mastandrea, nicholas.mastand@gmail.com"]

# [workspace.dependencies]

[package]
name = "navi"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0.102"
audio = { path = "crates/audio" }
model = { path = "crates/model" }
