[package]
name = "model"
version = "0.1.0"
edition = "2024"

[patch.crates-io]
candle-core = "=0.8.4"

[dependencies]
burn = "0.20"
burn-ndarray = "0.20"
burn-wgpu = "0.20"
burn-store = "0.20"
tokenizers = "0.23.1"
serde = "1.0.228"
serde_json = "1.0.149"
anyhow = "1.0.102"
tiktoken-rs = "0.11.0"
base64 = "0.22.1"
rustc-hash = "1.1.0"
